fix: Make the timer color white so that it is legible

--- a/src/aux-server/aux-web/shared/vue-components/PhotoCamera/PhotoCamera.css
+++ b/src/aux-server/aux-web/shared/vue-components/PhotoCamera/PhotoCamera.css
@@ -58,6 +58,7 @@ canvas {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #fff;
 }
 
 .capture-timer span {
